--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: linear-gradient(#e28418, #e2a866);
+    height: 98.79vh;
+    background-repeat: no-repeat;
+}
