Creates register form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,22 @@
 <main class="main">
+  <div>
+    <button [className]="isLogingIn ? 'primary active' : 'primary'" (click)="toggleLogin()">
+      Login
+    </button>
+    <button [className]="isLogingIn ? 'primary' : 'primary active'" (click)="toggleRegister()">
+      Register
+    </button>
+  </div>
   <div class="content">
-    <app-login></app-login>
+    @if(isLogingIn){
+    <div class="login-content">
+      <app-login></app-login>
+    </div>
+    } @else {
+    <div class="register-content">
+      <app-register></app-register>
+    </div>
+    }
   </div>
 </main>
 
