--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,32 @@
 .main {
+    text-align: center;
+
+    .primary {
+        font-size: 1rem;
+        width: 10rem;
+        height: 3rem;
+        border-radius: .5rem;
+        border: none;
+        margin: 0 1rem;
+        font-weight: 500;
+        font-size: larger;
+        cursor: pointer;
+    }
+    .active {
+        background: linear-gradient(rgb(204, 104, 57), rgb(197, 152, 94));
+        color: rgb(250, 220, 185);
+    }
+
+    button:hover {
+        border: 4px solid rgb(167, 90, 18);
+    }
+}
+
+.content {
     width: 100%;
     height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
